--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Kasino Online</title>
+    <title>Kasino Online</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,3 +14,25 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#games">Games</a></li>
                 <li><a href="#profile">Profile</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="main-content">
+        <section id="slot-machine">
+            <h2>Slot Machine</h2>
+            <button id="spin-button">Spin</button>
+        </section>
+
+        <section id="wallet">
+            <h2>Saldo: <span id="saldo">Rp 1.000.000</span></h2>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <p>&copy; 2024 Game Kasino Online</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
